--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "license": "ISC",
   "author": "aman",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
